# Advent-of-Code-2024

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
automation/: download_input.py  generate_day.py  update_readme.py
src/day01/: description.md  solution.py  test_solution.py  test_solution_01.py
src/day02/: day02_solution.py  description2.md  test_solution.py  test_solution_02.py
src/day03/: day03_solution.py  description3.md  test_solution_03.py
src/day04/: day04_solution.py  description4.md  test_solution_04.py
src/day05/: day05_solution.py  description5.md  test_solution_05.py
src/shared/: data_classes.py  utils.py
templates/day_template/: solution.py  test_input.txt  test_solution.py
