[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["F", "E", "W"]
lint.ignore = ["E501", "F401"]
fix = true

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = "--strict-markers"

[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of Code 2024 Python project"
authors = [
    {name = "Ricardo Vitorino", email = "hello@ricardovitorino.com"}
]
dependencies = [
    "pytest>=7.0.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "sympy>=1.12.0",
    "networkx>=3.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

